Fixade dark mode och ett par free grejer på info-sidan

--- a/style.css
+++ b/style.css
@@ -203,18 +203,39 @@ footer img {
   width: 100%;
   height: 400vh;
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-  background: #2193b0; /* fallback for old browsers */
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 20vh;
+}
+
+.skolinfo {
   background: -webkit-linear-gradient(
     to right,
-    #6dd5ed,
+    #ffffff,
     #2193b0
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right,
-    #6dd5ed,
+    #ffffff,
     #2193b0
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.svartbakgrund {
+  background-color: rgb(56, 56, 56);
+  color: rgb(199, 175, 175);
+}
+
+.skolinfo2 {
+  background: -webkit-linear-gradient(
+    to right,
+    #000000,
+    #2193b0
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #000000,
+    #2193b0
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  backdrop-filter: brightness(60%);
 }
 
 #hösttermin {
@@ -310,20 +331,33 @@ footer img {
   grid-column: 1/2;
   grid-row-start: 4;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  height: 20vh;
+  grid-template-columns: 15vw 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  height: 40vh;
 }
 
 #rökning h2 {
-  grid-column: 2;
-  grid-row: 1;
+  grid-column: 3;
+  grid-row-start: 1;
+  padding: 2vw;
 }
 
-#rökning p {
+#rökningsinfo2 {
   padding: 1vw;
-  grid-row: 2;
-  grid-column: 0/2;
+  grid-column: 2;
+  grid-row-start: 3;
+}
+
+#rökningsinfo1 {
+  padding: 1vw;
+  grid-row-start: 2;
+  grid-column-start: 2;
+}
+
+#rökning img {
+  grid-row: 2/4;
+  grid-column: 3/5;
+  width: 40vw;
 }
 
 #skolinfo div {
@@ -349,6 +383,8 @@ footer img {
 
 .hälsinfo {
   position: absolute;
+  padding-left: 1vw;
+  padding-right: 1vw;
 }
 .knapphöger {
   grid-column: 5/5;
@@ -435,6 +471,15 @@ footer img {
   align-items: center;
   flex-direction: column;
   padding-top: 2vw;
+  background-color: lightgreen;
+}
+
+.matkort2 {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 2vw;
+  background-color: darkgreen;
 }
 
 #matkortinfo {
@@ -455,6 +500,10 @@ footer img {
   padding-bottom: 2vh;
 }
 
+.sl h2 {
+  padding-top: 3vh;
+}
+
 #slkort {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -469,4 +518,17 @@ footer img {
 }
 #tutorial {
   padding-top: 2%;
+}
+#frukost {
+  grid-row: 5;
+}
+
+#darkmode {
+  background-color: black;
+  width: 5vw;
+  border: none;
+}
+
+#darkmode img {
+  width: 100%;
 }
